--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.25.0
-librosa==0.10.0
-matplotlib==3.7.1
-spleeter==2.3.2
-transformers==4.35.0
-praat-parselmouth==0.4.3
-noisereduce==2.0.5
-pandas==2.1.1
-seaborn==0.12.2
-numpy==1.24.3
+streamlit
+librosa
+matplotlib
+spleeter
+transformers
+praat-parselmouth
+noisereduce
+pandas
+seaborn
+numpy
