--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 streamlit
 librosa
 matplotlib
-spleeter
 transformers
-praat-parselmouth
+parselmouth
 noisereduce
 pandas
 seaborn
 numpy
+spleeter==2.3.2
+tensorflow==2.9.1
+ffmpeg-python
