--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ matplotlib
 transformers
 parselmouth
 noisereduce
-pandas>=1.3.0
+pandas<=1.3.3
 seaborn
 numpy
-spleeter==2.3.2
-tensorflow==2.9.1
+spleeter==2.1.0
+tensorflow<=2.8.0
 ffmpeg-python
