--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ streamlit
 librosa
 matplotlib
 transformers
-parselmouth
+parselmouth==1.1.1
 noisereduce
-pandas<=1.3.3
+pandas<1.3.0
 seaborn
 numpy
 spleeter==2.1.0
-tensorflow<=2.8.0
+tensorflow<2.9.0
 ffmpeg-python
