--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ streamlit
 librosa
 matplotlib
 transformers
-parselmouth==1.1.1
+parselmouth==0.5.0  # 안정적인 버전으로 조정
 noisereduce
-pandas<1.3.0
+pandas>=1.3.0,<1.5.0  # Python 3.11과 호환되는 버전
 seaborn
 numpy
 spleeter==2.1.0
-tensorflow<2.9.0
+tensorflow>=2.8.0,<2.10.0  # Python 3.11에서 호환
 ffmpeg-python
