--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,10 @@ streamlit
 librosa
 matplotlib
 transformers
-parselmouth==0.5.0
 noisereduce
 pandas>=1.3.0,<1.5.0
 seaborn
 numpy
-spleeter==2.1.0
-tensorflow>=2.8.0,<2.10.0
+spleeter==2.3.2
+tensorflow>=2.12.0
 ffmpeg-python
