requirements.txt 업데이트

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-streamlit
-librosa
-matplotlib
-transformers
-noisereduce
-pandas>=1.3.0,<1.5.0
-seaborn
-numpy>=1.23.0,<1.24.0
-tensorflow>=2.12.0  # TensorFlow 설치
-ffmpeg-python
-imageio-ffmpeg
 torch
 torchaudio
+transformers>=4.26.0
+librosa
+streamlit
+noisereduce
+pandas
 matplotlib
+imageio-ffmpeg
+ffmpeg-python
